--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "dev-watch": "tsc src/index.ts --watch --outDir ./lib"
   },
   "author": "sarah-veness",
   "license": "ISC",
