--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/node": "^20.4.5",
     "commander": "^11.0.0",
+    "dotenv": "^16.3.1",
     "typescript": "^5.1.6"
   }
 }
