--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.4.5",
+    "axios": "^1.4.0",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "typescript": "^5.1.6"
