--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A handy tool to shorten or expand a url",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx tsc",
     "dev-watch": "tsc src/index.ts --watch --outDir ./lib"
+  },
+  "jest": {
+    "collectCoverage": true
   },
   "author": "sarah-veness",
   "license": "ISC",
@@ -15,6 +18,14 @@
     "axios": "^1.4.0",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
+    "jest": "^29.6.2",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@jest/globals": "^29.6.2",
+    "babel-jest": "^29.6.2"
   }
 }
